--- a/css/navigation.css
+++ b/css/navigation.css
@@ -5,14 +5,95 @@ body {
 }
 
 #thedesktop {
-    display: grid; 
+    display: grid;
     height: 95%;
     width: 95%;
-    grid-template-rows: repeat(50%);
-    grid-template-columns: 1.6fr , 1.4fr ;
+    grid-template-columns: 1fr 1fr;
     grid-template-areas: 
-    'folder notepad'
-    'folder mix'
-    ;
+    'a b';
+}
+
+.theicons{ 
+    display: grid;
+    height: 1fr;
+    width: 1fr;
+    grid-area: a; 
+    grid-auto-flow: row;
+    overflow: hidden;
+    margin-left: 40px;
+    margin-top: 35px;
+    grid-template-columns: 1fr 1.2fr; 
+    grid-template-areas: 
+    'left right';
+}
+
+.theicons img{
+
+    max-height: 64px;
+    max-width: 100px;
+    object-fit: contain;
+}
+
+.theicons #left {
+    display: grid;
+    grid-area: left;
+    gap: 100px;
+}
+
+.theicons #right {
+    display: grid;
+    grid-area: right;
+    margin-top: 100px;
+    gap: 30px;
+}
+
+
+
+#notepad{
+    grid-area: b;
+    display: grid;
+    background: radial-gradient(circle, rgba(211,255,240,1) 0%, rgb(75, 255, 204) 100%);
+    width: 390px;
+    height: 240px;
+    margin-left: 90px;
+    margin-top: 45px;
+    padding: 20px;
+    border-width: 4px;
+    border-style: double;
+    
+
+}
+#notepad header{
+    display: flex;
+    justify-content: center;
+    
+    margin-top: -20px;
+    font-size: 27px;
+    overflow:hidden
+}
+#notepad main{
+    display: grid;
+    grid-template-columns: 1.4fr 1fr;
+    grid-template-areas: 
+    '1 2';
+    margin-top: -10px; 
+    font-size: 14px;
+}
+
+#notepad main #gif{
+    display: flex;
+    justify-content: center;
+    align-self: center;
+}
+
+
+#notepad main #gif img{
+    height: 100px;
+}
+
+
+#notepad beforeclick{
+    
+    stroke-dasharray: 0cm;
 
 }
