--- a/css/navigation.css
+++ b/css/navigation.css
@@ -2,6 +2,7 @@ body {
     background-image: url(/img/windowsbg.jpg);
     background-size: cover;
     background-position: center;
+    background-position-y: -90px;
 }
 
 #thedesktop {
@@ -23,7 +24,7 @@ body {
     width: 1fr;
     grid-area: c; 
     grid-auto-flow: row;
-    overflow: hidden;
+    
     margin-left: 40px;
     margin-top: 80px;
     grid-template-rows: 1fr;
@@ -110,24 +111,63 @@ body {
     
 }
 
+@media (max-width:430px){
 
+    body{
+        background-position-y: 10px;
+        background-size:180vh
+    }
 
-@media (max-width: 600px) {
+    #notepad{
+        font-size: 15px;
+        
+    }
 
-   
+    #notepad header{
+        font-size: 20px;
+    }
+}
 
+@media (max-width: 500px) {
+
+    body{
+        background-size: 180vh;
+    }
     .theicons img{
         max-height: 11vw;
     }
 
+    #notepad{
+      margin-left: 19px;
+      border-width: 3px;
+    }
+
+
     #notepad main #gif{
        margin-bottom: 6px;
     }
+}
+ 
+@media(max-width: 617px){
 
+    body{
+        background-size: 180vh;
+    }
+    
+    #notepad{
+        max-width: 195px;
+    }
+
+    .theicons{
+    
+    }
 }
 
 @media (max-width: 820px){
 
+    body{
+        background-size: 180vh;
+    }
     .theicons{
         margin-left: -0.1vw
     }
